--- a/python/djangolab/students/templates/students_delete_template.html
+++ b/python/djangolab/students/templates/students_delete_template.html
@@ -3,9 +3,9 @@
         <title>Students</title>
     </head>
     <body>
-        <h4>Delete student entry</h4>
+        <h4>Delete student entries</h4>
         {% if status == "SUCCESS" %}
-            <p>Successfully deleted student!</p>
+            <p>Successfully deleted students!</p>
         {% elif status == "ERROR" %}
             <p>Can not delete!</p>
         {% elif status is not None %}
