--- a/python/djangolab/universities/templates/universities_delete_template.html
+++ b/python/djangolab/universities/templates/universities_delete_template.html
@@ -3,16 +3,16 @@
         <title>Universities</title>
     </head>
     <body>
-        <h4>Delete university entry</h4>
+        <h4>Delete university entries</h4>
         {% if status == "SUCCESS" %}
-            <p>Successfully deleted university!</p>
+            <p>Successfully deleted universities!</p>
         {% elif status == "ERROR" %}
             <p>Can not delete: Foreign Key!</p>
         {% elif status is not None %}
             <p>Unknown status. Check logs!</p>
         {% endif %}
         <form method="POST">
-            {% csrf_token %}
+            {{ form.csrf_token }}
             <table border="1" cellpadding="5">
                 <tr>
                     <th>Full Name</th>
@@ -20,7 +20,7 @@
                     <th>Founded Date</th>
                     <th>Delete</th>
                 </tr>
-                {% for item in values %}
+                {% for item in items %}
                 <tr> 
                     <td>{{ item.full_name }}</td>
                     <td>{{ item.abbreviation_name }}</td>
